--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.btn{
+  margin-top: 5%;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.image{
+  height: 200px;
+  width:200px;
+  border:2px solid gray;
+  border-radius:10px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.container{
+  height: 400px;
+  width: 40%;
+  border:2px solid gray;
+  border-radius:10px;
+  margin-left: 25%;
+  text-align:center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container-all{
+  margin-left: 45%;
 }
